[package]
name = "shadow_dancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
rand = "0.8.5"
bevy_kira_audio = "0.13.0"
iyes_loopless = "0.9.1"
bevy_easings = "0.9.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]


